Fixed footer on mobile

--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -13,6 +13,14 @@ main {
   padding: 0 5%;
   overflow: auto;
   padding-bottom: 13.3%;
+
+  @media screen and (max-width: 720px) {
+    padding-bottom: 20%;
+  }
+
+  @media screen and (max-width: 400px) {
+    padding-bottom: 40%;
+  }
 }
 
 a {
@@ -86,6 +94,10 @@ footer {
   left: 0;
   width: 100%;
   height: 100px;
+
+  @media screen and (max-width: 400px) {
+    height: 120px;;
+  }
 }
 
 /**********************************
